@@ -1,9 +1,6 @@
 # set the include path for X, qt and KDE
 INCLUDES = -I$(top_srcdir)/akregator/src/librss $(all_includes)
 
-# these are the headers for your project
-noinst_HEADERS = akregator.h akregator_part.h feedstree.h feedscollection.h feed.h articlelist.h articleviewer.h feedgroup.h addfeeddialog.h trayicon.h
-
 # let automoc handle all of the meta source files (moc)
 METASOURCES = AUTO
 
@@ -40,8 +37,8 @@ kde_module_LTLIBRARIES = libakregatorpart.la
 
 # the Part's source, library search path, and link libraries
 libakregatorpart_la_SOURCES = akregator_part.cpp feedstree.cpp feedscollection.cpp feed.cpp articlelist.cpp articleviewer.cpp feedgroup.cpp addfeeddialog.cpp addfeeddialogbase.ui
-libakregatorpart_la_LDFLAGS = -module $(KDE_PLUGIN) $(all_libraries)
-libakregatorpart_la_LIBADD = $(top_builddir)/akregator/src/librss/librsslocal.a $(LIB_KPARTS) $(LIB_KFILE) $(LIB_KHTML)
+libakregatorpart_la_LDFLAGS = $(KDE_RPATH) -version-info 1:0 -no-undefined $(all_libraries) 
+libakregatorpart_la_LIBADD = $(top_builddir)/akregator/src/librss/librsslocal.la $(LIB_KPARTS) $(LIB_KFILE) $(LIB_KHTML)
 
 # this is where the desktop file will go 
 partdesktopdir = $(kde_servicesdir)
